; ModuleID = '/home/carl/AnghaBench/postgres/src/common/extr_username.c_get_user_name.c'
source_filename = "/home/carl/AnghaBench/postgres/src/common/extr_username.c_get_user_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.passwd = type { i8* }

@errno = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [44 x i8] c"could not look up effective user ID %ld: %s\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"user does not exist\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_user_name(i8** %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8**, align 8
  %4 = alloca %struct.passwd*, align 8
  %5 = alloca i64, align 8
  store i8** %0, i8*** %3, align 8
  %6 = call i64 (...) @geteuid()
  store i64 %6, i64* %5, align 8
  %7 = load i8**, i8*** %3, align 8
  store i8* null, i8** %7, align 8
  store i64 0, i64* @errno, align 8
  %8 = load i64, i64* %5, align 8
  %9 = call %struct.passwd* @getpwuid(i64 %8)
  store %struct.passwd* %9, %struct.passwd** %4, align 8
  %10 = load %struct.passwd*, %struct.passwd** %4, align 8
  %11 = icmp ne %struct.passwd* %10, null
  br i1 %11, label %26, label %12

12:                                               ; preds = %1
  %13 = call i32 @_(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  %14 = load i64, i64* %5, align 8
  %15 = load i64, i64* @errno, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %12
  %18 = load i64, i64* @errno, align 8
  %19 = call i32 @strerror(i64 %18)
  br label %22

20:                                               ; preds = %12
  %21 = call i32 @_(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0))
  br label %22

22:                                               ; preds = %20, %17
  %23 = phi i32 [ %19, %17 ], [ %21, %20 ]
  %24 = call i8* (i32, i64, ...) @psprintf(i32 %13, i64 %14, i32 %23)
  %25 = load i8**, i8*** %3, align 8
  store i8* %24, i8** %25, align 8
  store i8* null, i8** %2, align 8
  br label %30

26:                                               ; preds = %1
  %27 = load %struct.passwd*, %struct.passwd** %4, align 8
  %28 = getelementptr inbounds %struct.passwd, %struct.passwd* %27, i32 0, i32 0
  %29 = load i8*, i8** %28, align 8
  store i8* %29, i8** %2, align 8
  br label %30

30:                                               ; preds = %26, %22
  %31 = load i8*, i8** %2, align 8
  ret i8* %31
}

declare dso_local i64 @geteuid(...) #1

declare dso_local %struct.passwd* @getpwuid(i64) #1

declare dso_local i8* @psprintf(i32, i64, ...) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @strerror(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
